--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/briandoyle/.local/share/virtualenvs/sc-hash-bc-student-HSwDRd-G/bin/python"
+    "python.pythonPath": "C:\\Users\\Josh\\.virtualenvs\\Sprint-Challenge--Hash-BC-OxMjEw0v\\Scripts\\python.exe"
 }
